--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "peer": "^1.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
